# docs/swagger.yaml
@@ -226,6 +226,40 @@ paths:
       tags:
       - Products
   /products/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete details of a Product by id
+      parameters:
+      - description: Product id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Product data
+        in: body
+        name: Product
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ProductDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ProductDTO'
+        "400":
+          description: Invalid data
+          schema:
+            type: string
+        "404":
+          description: Product not found
+          schema:
+            type: string
+      summary: Delete a Product
+      tags:
+      - Products
     get:
       consumes:
       - application/json
@@ -286,6 +320,35 @@ paths:
           schema:
             type: string
       summary: Update a Product
+      tags:
+      - Products
+  /products/category/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get details of a Product by category
+      parameters:
+      - description: Product category
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ProductDTO'
+        "404":
+          description: Product not found
+          schema:
+            type: string
+        "500":
+          description: Product not found
+          schema:
+            type: string
+      summary: Get a Product by category
       tags:
       - Products
 swagger: "2.0"
